main plaza story

--- a/Beegin.html
+++ b/Beegin.html
@@ -391,7 +391,9 @@ body[data-tags~=t8n-warp].transition-out {
 
 
 
+
 </style><script role="script" id="twine-user-script" type="text/twine-javascript">
+
 
 
 
@@ -587,6 +589,19 @@ Welp. You did it. You actually did it. You traveled through queenfucking time. O
 Okay, so you are a number of hours backwards in time. You have a mission to save the Queen, nay, your entire hive. No sweatbee. Just gotta grab some royal jelly, only the most precious substance in the entire city. Ain&#39;t no thing. You can totes do this. You&#39;re all over this like yellow on pollen. You...
 
 Okay, you&#39;re scared out of your goddamn mind. You&#39;re not even sure what is happening is real, or if you had some sort of severe psychological break. Oh well, first thing&#39;s first, if you want some royal jelly, the best place to start is the [[Hospital|Hospital Lobby]]. 
+
+OKAY THIS IS WHAT YOU SEE WHEN YOU COME FROM THE ESTUARY, EVERY TIME AFTER THAT IN THE FIRST LOOP IT&#39;LL JUST BE THE DESCRIPTION (NOT WRITTEN YET, JUST USE DUMMY TEXT) AND MAP.
+
+Yes, time to get to work. Bending a fundamental force of the universe to your will to help you commit petty theft. Right. You ponder where to start. An obvious option would be one of the two royal jelly factories in the city, though getting in might be tricky. You could also ask around at the bar. You could see if Biz at the pawn shop knows anything, though the two of you don&#39;t get along great. You could also try BPU, the local college, or maybe the park, or any number of places. You better decide soon, though. Time marches on.
+
+(MAP IS HERE)
+
+
+
+
+
+
+
 &lt;&lt;elseif ($warpTimes === 1 &amp;&amp; visited(&quot;Supply Closet&quot;) &gt; 0) || $warpTimes === 2&gt;&gt;
 Well ain&#39;t this familiar.
 &lt;&lt;else&gt;&gt;
