fix dumb mistake
i somehow changed the starting passage to a random other one good job
bobby 10/10

--- a/Beegin.html
+++ b/Beegin.html
@@ -65,7 +65,7 @@ var LZString={_keyStr:"ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz01234
 		<p id="init-lacking">Apologies! Your web browser lacks required capabilities. Please consider upgrading it or switching to a more modern web browser.</p>
 		<p id="init-loading">Initializing. Please wait&hellip;<br /><progress></progress></p>
 	</div>
-	<div id="store-area" hidden><tw-storydata name="Beegin" startnode="16" creator="Twine" creator-version="2.0.11" ifid="330EF230-6E56-4CF3-B69F-F44E0C427FAC" format="SugarCube" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">@import 'https://fonts.googleapis.com/css?family=Dosis|Poiret+One';
+	<div id="store-area" hidden><tw-storydata name="Beegin" startnode="1" creator="Twine" creator-version="2.0.11" ifid="330EF230-6E56-4CF3-B69F-F44E0C427FAC" format="SugarCube" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">@import 'https://fonts.googleapis.com/css?family=Dosis|Poiret+One';
 /* Overall styles */
 * {
 	margin: 0;
@@ -392,7 +392,9 @@ body[data-tags~=t8n-warp].transition-out {
 
 
 
+
 </style><script role="script" id="twine-user-script" type="text/twine-javascript">
+
 
 
 
@@ -589,7 +591,7 @@ Welp. You did it. You actually did it. You traveled through queenfucking time. O
 Okay, so you are a number of hours backwards in time. You have a mission to save the Queen, nay, your entire hive. No sweatbee. Just gotta grab some royal jelly, only the most precious substance in the entire city. Ain&#39;t no thing. You can totes do this. You&#39;re all over this like yellow on pollen. You...
 
 Okay, you&#39;re scared out of your goddamn mind. You&#39;re not even sure what is happening is real, or if you had some sort of severe psychological break. Oh well, first thing&#39;s first, if you want some royal jelly, the best place to start is the [[Hospital|Hospital Lobby]]. 
-<<<<<<< HEAD
+&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
 
 OKAY THIS IS WHAT YOU SEE WHEN YOU COME FROM THE ESTUARY, EVERY TIME AFTER THAT IN THE FIRST LOOP IT&#39;LL JUST BE THE DESCRIPTION (NOT WRITTEN YET, JUST USE DUMMY TEXT) AND MAP.
 
@@ -606,7 +608,7 @@ Yes, time to get to work. Bending a fundamental force of the universe to your wi
 &lt;&lt;elseif ($warpTimes === 1 &amp;&amp; visited(&quot;Supply Closet&quot;) &gt; 0) || $warpTimes === 2&gt;&gt;
 =======
 &lt;&lt;elseif ($warpTimes === 1 &amp;&amp; visited(&quot;Supply Closet&quot;) &gt; 0) || $warpTimes === 2&gt;&gt;\
->>>>>>> origin/master
+&gt;&gt;&gt;&gt;&gt;&gt;&gt; origin/master
 Well ain&#39;t this familiar.
 &lt;&lt;else&gt;&gt;\
 Descriptions n shit.
