--- a/Beegin.html
+++ b/Beegin.html
@@ -394,7 +394,9 @@ body[data-tags~=t8n-warp].transition-out {
 
 
 
+
 </style><script role="script" id="twine-user-script" type="text/twine-javascript">
+
 
 
 
@@ -596,7 +598,7 @@ Okay, you&#39;re scared out of your goddamn mind. You&#39;re not even sure what 
 
 OKAY THIS IS WHAT YOU SEE WHEN YOU COME FROM THE ESTUARY, EVERY TIME AFTER THAT IN THE FIRST LOOP IT&#39;LL JUST BE THE DESCRIPTION (NOT WRITTEN YET, JUST USE DUMMY TEXT) AND MAP.
 
-Yes, time to get to work. Bending a fundamental force of the universe to your will to help you commit petty theft. Right. You ponder where to start. An obvious option would be one of the two royal jelly factories in the city, though getting in might be tricky. You could also ask around at the bar. You could see if Biz at the pawn shop knows anything, though the two of you don&#39;t get along great. You could also try BPU, the local college, or maybe the park, or any number of places. You better decide soon, though. Time marches on.
+Yes, time to get to work. Bending a fundamental force of the universe to your will to help you commit petty theft. Right. You ponder where to start. An obvious option would be one of the two honey factories in the city, though getting in might be tricky. You could also ask around at the bar. You could see if Biz at the pawn shop knows anything, though the two of you don&#39;t get along great. You could also try BPU, the local college, or maybe the park, or any number of places. You better decide soon, though. Time marches on.
 
 (MAP IS HERE)
 
@@ -643,14 +645,21 @@ if not stole the jelly: there no doctor here name that go away try the universit
 
 
 &lt;&lt;display &quot;Directional Map&quot;&gt;&gt;</tw-passagedata>
-<tw-passagedata pid="23" name="GHF1" tags="" position="923,1234">Imposing building blah blah
+<tw-passagedata pid="23" name="GHF1" tags="" position="923,1234">The GHF is a tall, imposing building, some parts of it almost reaching the top of the hive. 30 percent of the entire hive&#39;s supply is produced here, and it&#39;s not just honey - wax, nectar, pollen stores, even royal jelly - are all produced and/or housed here. While its fortunes have fallen in recent months, the GHF&#39;s stature, both in the community and in terms of literal physicality, continues to loom large.
 
 &lt;&lt;if $warpTimes === 1&gt;&gt;
-You go up to GHF, but are quickly turned away by security - it&#39;s a high tech thing with retina scanners n shit. Which is good since security at the hive entrance has been lax recently.
+You boldly walk straight up to GHF, but are quickly turned away by security - and if the drones hadn&#39;t stopped you, the tech definitely would have. This is cuting edge stuff - particle detectors, compound retina scanners, the works. As crime and looting have gone up, it makes sense that GHF hasn&#39;y dropped the ball of wax when it comes to securing their property and product. There is no way you&#39;re getting in there, at least through this entrance.
 &lt;&lt;endif&gt;&gt;
 
 &lt;&lt;display &quot;Directional Map&quot;&gt;&gt;</tw-passagedata>
-<tw-passagedata pid="24" name="SHF1" tags="" position="527,1144">Description
+<tw-passagedata pid="24" name="SHF1" tags="" position="527,1144">The SHF is a small, run-down building, some parts of it almost falling off the main structure. 60 percent of the entire hive&#39;s supply is produced here, and it&#39;s not just honey - it&#39;s also not all entirely legal. Since itJSDFHSDJKFSHDJK 
+its fortunes have fallen in recent months, the GHF&#39;s stature, both in the community and in terms of literal physicality, continues to loom large.
+JDKSGHSDJKFHSDKJF
+
+
+
+
+
 
 &lt;&lt;if $warpTimes === 1&gt;&gt;
 &lt;&lt;if !$keycard&gt;&gt;
